test/test_cases/invalid/semanticErr/variables/basicTypeErr03.ast
-- Test: basicTypeErr03.wacc

-- Uploaded file: 
---------------------------------------------------------------
# type mismatch: int <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = "foo"
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:10 -- Incompatible type at "foo" (expected: INT, actual: CHAR[])

